Login dialog controls spacing fix

--- a/css/dialog/login.css
+++ b/css/dialog/login.css
@@ -65,12 +65,11 @@
 }
 
 ._37ANMR1DAeBJYXulW34A2S {
-  height: 39px !important;
+  height: 32px !important;
 }
 
 ._37ANMR1DAeBJYXulW34A2S .title-area .title-bar-actions {
-  margin-top: 1px !important;
-  margin-right: 1px !important;
+  margin: 0 !important;
 }
 
 .lat0M-V5X4uYd6Mpm1DJ1 {
